--- a/application.yml
+++ b/application.yml
@@ -6,6 +6,10 @@ management:
   security:
     enabled: false
 
+  info:
+    git:
+      mode: full
+
 # TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF
 logging:
   level:
